# macxtreamer

./: .gitignore  CPU_USAGE_FIX.md  Cargo.toml  EPG_CURRENT_PROGRAM_FIX.md  EPG_SEARCH_FEATURE.md  EPG_SEARCH_GUIDE.md  LICENSE  README.md  README_ANDROID.md  VLC_OPTIMIZATION_GUIDE.md  check_api_fields.py  check_languages.py  check_vod_info.py  create_dmg.sh  debug_api.py  release.sh  test_api.py
.claude/: settings.json
.github/workflows/: release.yml  rust.yml
assets/: Info.plist  icon.icns
core/: Cargo.toml
core/src/: api.rs  jni.rs  lib.rs  models.rs  player.rs
mobile/android/: build.gradle.kts  settings.gradle.kts
mobile/android/app/: build.gradle.kts  proguard-rules.pro
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/java/com/example/macxtreamer/: Jni.kt  MainActivity.kt  PlayerActivity.kt
next/: .gitignore  README.md  SETUP.md  package-lock.json  package.json  postcss.config.ts  tsconfig.json
next/app/: globals.css  layout.tsx  page.tsx
next/app/api/categories/: route.ts
next/app/api/config/: route.ts
next/app/api/episodes/: route.ts
next/app/api/items/: route.ts
next/app/browser/: page.tsx
next/app/live/[id]/: page.tsx
next/app/series/[id]/: page.tsx
next/app/series/detail/[seriesId]/: page.tsx
next/app/vod/[id]/: page.tsx
next/app/vod/detail/[vodId]/: page.tsx
next/components/: ContinueWatching.tsx  HorizontalRow.tsx  LoadingSkeletons.tsx  Sidebar.tsx  TopBar.tsx  TvGuide.tsx
next/lib/: api.ts  cache.ts  config.ts
scripts/: build_android_core.sh  make_dmg.sh  sign_and_notarize.sh
src/: ai_panel.rs  api.rs  app_state.rs  cache.rs  config.rs  download_utils.rs  downloads.rs  helpers.rs  i18n.rs  icon.rs  images.rs  logger.rs  main.rs  main_old.rs  models.rs  network.rs  player.rs  search.rs  storage.rs  ui_helpers.rs  updater.rs
