[package]
name = "macxtreamer"
version = "0.1.0"
edition = "2024"
default-run = "macxtreamer"

[dependencies]
eframe = "0.24"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
egui_extras = "0.24"
serde = { version = "1.0", features = ["derive"] }
directories = "5"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }

[package.metadata.bundle]
name = "macxtreamer"
identifier = "com.yourdomain.macxtreamer"
icon = ["assets/icon.icns"]
copyright = "© 2025"
