[package]
name = "macxtreamer"
version = "0.1.7"
edition = "2024"
default-run = "macxtreamer"

[dependencies]
eframe = "0.24"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
egui_extras = "0.24"
serde = { version = "1.0", features = ["derive"] }
directories = "5"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
futures-util = "0.3"
futures = "0.3"
cargo-ndk = "4.1.2"
webbrowser = "1.0"
urlencoding = "2.1"
base64 = "0.22"
once_cell = "1.19"
arboard = "3.4"
rfd = "0.14"
chrono = "0.4.42"
rayon = "1.8"

[package.metadata.bundle]
name = "macxtreamer"
identifier = "com.yourdomain.macxtreamer"
icon = ["assets/icon.icns"]
resources = ["assets/Info.plist"]

[package.metadata.bundle.settings]
CFBundleExecutable = "macxtreamer"
