[package]
name = "macxtreamer_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
urlencoding = "2"
jni = { version = "0.21", default-features = false }
once_cell = "1"
